# ChangeLog for sys-apps/openrc
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/openrc/ChangeLog,v 1.175 2011/11/21 03:11:18 vapier Exp $

  21 Nov 2011; Mike Frysinger <vapier@gentoo.org> openrc-0.9.4.ebuild,
  openrc-9999.ebuild:
  Trim old baselayout-1 dirs in /lib/.

  18 Nov 2011; William Hubbs <williamh@gentoo.org> openrc-9999.ebuild:
  Add static-libs use flag for bug #378267

  16 Nov 2011; William Hubbs <williamh@gentoo.org> openrc-9999.ebuild:
  Since oldnet is now the default upstream, we do not need to force this
  in the ebuild.

  07 Nov 2011; Alexis Ballier <aballier@gentoo.org> openrc-0.8.3-r1.ebuild,
  openrc-0.9.2.ebuild, openrc-0.9.3.ebuild, openrc-0.9.3-r1.ebuild,
  openrc-0.9.4.ebuild, openrc-9999.ebuild:
  A new fuser is provided by freebsd-ubin starting from FreeBSD 9, change deps
  to reflect that.

*openrc-0.9.4 (16 Oct 2011)

  16 Oct 2011; Christian Ruppert <idl0r@gentoo.org> +openrc-0.9.4.ebuild:
  Version bump to 0.9.4.

*openrc-0.9.3-r1 (10 Sep 2011)

  10 Sep 2011; William Hubbs <williamh@gentoo.org> +openrc-0.9.3-r1.ebuild,
  openrc-9999.ebuild:
  revert change to LIBEXEC for bug 381783.

*openrc-0.9.3 (08 Sep 2011)

  08 Sep 2011; William Hubbs <williamh@gentoo.org> +openrc-0.9.3.ebuild:
  version bump for bug #381783.

*openrc-0.9.2 (02 Sep 2011)

  02 Sep 2011; William Hubbs <williamh@gentoo.org> -openrc-0.9.1.ebuild,
  +openrc-0.9.2.ebuild:
  version bump, bug #381523 tracks changes since 0.9.1.

*openrc-0.9.1 (01 Sep 2011)

  01 Sep 2011; William Hubbs <williamh@gentoo.org> -openrc-0.9.0.ebuild,
  +openrc-0.9.1.ebuild:
  version bump , bug #381463 tracks fixes since openrc-0.9.0.

*openrc-0.9.0 (01 Sep 2011)

  01 Sep 2011; William Hubbs <williamh@gentoo.org> +openrc-0.9.0.ebuild:
  version bump, bug #374183 tracks changes since openrc-0.8.3.

  01 Sep 2011; William Hubbs <williamh@gentoo.org> openrc-9999.ebuild,
  +files/start-stop-daemon.pam: