@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/openrc
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/openrc/ChangeLog,v 1.175 2011/11/21 03:11:18 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/openrc/ChangeLog,v 1.176 2011/11/21 22:37:21 vapier Exp $
+
+  21 Nov 2011; Mike Frysinger <vapier@gentoo.org> openrc-0.9.4.ebuild,
+  openrc-9999.ebuild:
+  Move baselayout-1 internal cleanup to baselayout as suggested by William.
 
   21 Nov 2011; Mike Frysinger <vapier@gentoo.org> openrc-0.9.4.ebuild,
   openrc-9999.ebuild:
